# fineslice

./: .gitignore  .pylintrc  LICENSE  README.md  fineslice.html  index.html  pyproject.toml  search.js  setup.cfg
.github/: dependabot.yaml
.github/workflows/: docs.yaml  publish-pypi.yaml  test.yaml  workflows.yml
src/fineslice/: __init__.py  affine.py  bounds.py  cuboid.py  debug_utils.py  filter.py  intersect.py  sampler_0d.py  sampler_1d.py  sampler_2d.py  sampler_3d.py  types.py  utils.py
src/fineslice/datacube/: __init__.py  datacube.py
tests/test_fineslice/: __init__.py  test_datacube.py  test_sampler_0d.py  test_sampler_1d.py  test_sampler_2d.py  test_sampler_3d.py  test_slicer.py
