[metadata]
name = fineslice
version = 0.0.1
author = Florian Rupprecht
description = Affine slicer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nx10/fineslice
project_urls =
    Bug Tracker = https://github.com/nx10/fineslice/issues
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires =
    numpy
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src